// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should add new received event, and update existing one 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [
    Object {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": Object {
        "foo": "bar",
      },
      "id": 1,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-closed",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
    Object {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": null,
      "id": 2,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-reopened",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should add received event when it is not in the store yet 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [
    Object {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": null,
      "id": 1,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-reopened",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should not add received event when it is a phone event 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should update stored event when received event already exists in the store 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [
    Object {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": Object {
        "foo": "bar",
      },
      "id": 1,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-reopened",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action REMOVE_TICKET_AUDIT_LOG_EVENTS should remove audit log events 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [
    Object {
      "account_id": 1,
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": null,
      "id": 2,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "foo",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action SEND_INTENT_FEEDBACK_SUCCESS should update the intents with the new ones 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [
    Object {
      "id": 1,
      "intents": Array [
        Object {
          "is_user_feedback": false,
          "name": "return/request",
          "rejected": false,
        },
        Object {
          "is_user_feedback": false,
          "name": "return/status",
          "rejected": true,
        },
        Object {
          "is_user_feedback": false,
          "name": "shipping/change",
          "rejected": true,
        },
      ],
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action TICKET_MESSAGE_DELETED should remove message 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle ADD_TICKET_TAGS 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
    Object {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle ADD_TICKET_TAGS 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
    Object {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle ADD_TICKET_TAGS 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle APPLY_MACRO 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle APPLY_MACRO 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "id": 2,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle CLEAR_APPLIED_MACRO 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle CLEAR_TICKET 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DELETE_ACTION_ON_APPLIED 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "actions": Object {
        "1": Object {
          "arguments": Object {
            "foo": "bar",
          },
        },
      },
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DELETE_TICKET_MESSAGE_SUCCESS 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [
    Object {
      "id": 1,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DELETE_TICKET_PENDING_MESSAGE 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": 2,
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DISPLAY_HISTORY_ON_NEXT_PAGE 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": true,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DISPLAY_HISTORY_ON_NEXT_PAGE 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle FETCH_TICKET_START 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": true,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle FETCH_TICKET_START 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "id": 1,
  "is_unread": false,
  "messages": Array [
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "id": 1,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle FETCH_TICKET_START 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MARK_TICKET_DIRTY 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": true,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MARK_TICKET_DIRTY 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_CUSTOMER 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_CUSTOMER 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "id": 1,
    "name": "Alex",
  },
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_CUSTOMERS_SUCCESS 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_CUSTOMERS_SUCCESS 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "id": 1,
    "name": "Alex",
  },
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_TICKET 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "id": 1,
  "is_unread": false,
  "messages": Array [
    Object {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_TICKET 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "id": 1,
  "is_unread": false,
  "messages": Array [
    Object {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_TICKET 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [
    Object {
      "object_id": 1,
      "type": "ticket-created",
    },
    Object {
      "object_id": 1,
      "type": "ticket-closed",
    },
    Object {
      "object_id": 1,
      "type": "ticket-reopened",
    },
  ],
  "id": 1,
  "is_unread": false,
  "messages": Array [
    Object {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START and NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_ERROR 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": "123",
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-01-01T00:00:00.000Z",
        "originalMessage": Object {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": Object {
            "bcc": Array [],
            "cc": Array [],
            "from": Object {},
            "to": Array [
              Object {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": Object {
          "bcc": Array [],
          "cc": Array [],
          "from": Object {},
          "to": Array [
            Object {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START and NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_ERROR 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": 1,
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-07-29T22:00:00",
        "failed_datetime": "2017-01-01T00:00:00.000Z",
        "originalMessage": Object {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": Object {
            "bcc": Array [],
            "cc": Array [],
            "from": Object {},
            "to": Array [
              Object {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": Object {
          "bcc": Array [],
          "cc": Array [],
          "from": Object {},
          "to": Array [
            Object {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START and NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_ERROR 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": 1,
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-07-29T22:00:00",
        "originalMessage": Object {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": Object {
            "bcc": Array [],
            "cc": Array [],
            "from": Object {},
            "to": Array [
              Object {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": Object {
          "bcc": Array [],
          "cc": Array [],
          "from": Object {},
          "to": Array [
            Object {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_SUCCESS 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "id": 12,
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle REMOVE_TICKET_MESSAGE_REQUEST 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [
    Object {
      "id": 1,
      "request_id": null,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle REMOVE_TICKET_TAG 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle REMOVE_TICKET_TAG 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_AGENT 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": Object {
    "id": 1,
  },
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_AGENT 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_CUSTOMER 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SPAM_START 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": true,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": true,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SPAM_START 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SPAM_SUCCESS 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_STATUS 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "closed",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SUBJECT 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "another title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TEAM 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": Object {
    "id": 1,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TEAM 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TICKET_MESSAGE_REQUEST 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [
    Object {
      "id": 1,
      "request_id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle TOGGLE_HISTORY 1`] = `
Object {
  "_internal": Object {
    "displayHistory": true,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle TOGGLE_HISTORY 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle TOGGLE_HISTORY 3`] = `
Object {
  "_internal": Object {
    "displayHistory": true,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle UPDATE_ACTION_ARGS_ON_APPLIED 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "actions": Object {
        "0": Object {
          "arguments": Object {
            "hello": "world",
          },
        },
      },
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle UPDATE_TICKET_MESSAGE_START 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "is_unread": false,
  "messages": Array [],
  "priority": "normal",
  "reply_options": Object {
    "email": Object {
      "answerable": true,
    },
    "internal-note": Object {
      "answerable": true,
    },
  },
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle same actions stacking 1`] = `
Object {
  "actions": Array [
    Object {
      "arguments": Object {
        "status": "closed",
      },
      "name": "setStatus",
      "title": "Set status",
      "type": "user",
    },
    Object {
      "arguments": Object {
        "subject": "Test Verb",
      },
      "name": "setSubject",
      "title": "Set subject",
      "type": "user",
    },
  ],
  "id": 2,
}
`;
